TextClassBuilder. Add enum